@@ -113,6 +113,10 @@
   投稿時刻の順に表示されるので注意してください。これは「お気に入り」に
   登録した時刻を取得する方法がないためです。また、取得できる「お気に入
   り」は最大20件です。より過去にさかのぼっての取得は未対応です。
+* 短縮URL生成サービス`is.gd'に対応
+  下記の設定で短縮URL生成に`is.gd'を使うようになります。
+  (setq twittering-tinyurl-service 'is.gd)
+  Thanks to Michael Kohl.
 * ...
 
 ### バグ修正
